Decision tree done and regression under construction

--- a/src/app/classification/classification.component.html
+++ b/src/app/classification/classification.component.html
@@ -1,5 +1,7 @@
 <div class="container-fluid w-100" style="padding-left: 200px;padding-right: 200px">
+
   <h1>Decision Tree</h1>
+
   <div class="container-fluid card-style d-flex flex-row justify-content-around align-items-center">
     <div
       *ngIf="result"
@@ -68,4 +70,10 @@
       <button  class="btn btn-outline-warning" (click)="resetForm()">Reset</button>
     </div>
   </form>
+  <div class="card mt-3" style="width: 18rem;">
+    <img class="card-img-top" src="https://www.mihaileric.com/static/layer2TreeDiagram-95dec8fbb247ce5161f63e63d8816fed-28303.png" alt="Card image cap">
+  </div>
 </div>
+
+
+
