--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,14 @@
-<app-classification></app-classification>
+
+  <ul class="nav mb-5">
+    <li class="nav-item">
+      <a class="nav-link active" href="#" routerLink="/tree">Decision Tree</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#" routerLink="regression">Regression</a>
+    </li>
+
+  </ul>
+
+
+  <router-outlet></router-outlet>
+
