--- a/src/styles.css
+++ b/src/styles.css
@@ -10,3 +10,12 @@
 .bold-label {
   font-weight: bold;
 }
+body {
+  background-image: url("https://media.istockphoto.com/vectors/criminal-stealing-bicycle-vector-illustration-caucasian-man-in-black-vector-id1179640320?k=20&m=1179640320&s=612x612&w=0&h=j2ZhG1Gw4R1FLrk0iiG3d_SbWmxVfm9DpJ6btiVaNrQ=");
+  background-repeat: no-repeat;
+  /*background-size: cover;*/
+  background-position: bottom;
+}
+input,select {
+  opacity: 0.5;
+}
